# datathon

./: .gitignore  FINAL_MODEL_MANIFEST.md  README.md  pyproject.toml  requirements.txt
dataset/: submission.csv
dataset/submissions/: compliant_component_reference.csv  internal_bottomup_baseline.csv  meta_fine_horizon_nnls.csv  meta_horizon_regime_nnls.csv  meta_horizon_ridge.csv  meta_horizon_story_nnls.csv  meta_static_nnls.csv  recursive_multihead_clean.csv  time_decay_hybrid_conservative.csv  time_decay_hybrid_long_horizon.csv  time_decay_hybrid_selected.csv
datathon-2026/: DB2_Products.ipynb  DB3_Customer.ipynb  WordCloud.ipynb  margin_rate_analysis.py  product_cash_cows_v_sua.txt  product_dogs_loi.txt  product_hidden_gems_kim_cuong.txt  product_stars_hat_nhan.txt  strategy_cash_cows.txt  strategy_dogs.txt  strategy_hidden_gems.txt  strategy_stars.txt
datathon-2026-round-1/: baseline.ipynb  eda.ipynb  solution.ipynb  solution.py  tracnghiem.ipynb
datathon-2026-round-1/dataset/: daily_business_features.csv  feature_experiments_folds.csv  feature_experiments_summary.csv  feature_importance_margin.csv  feature_importance_revenue.csv  shap_report.json  submission_base.csv  submission_bottomup.csv  submission_decomp_base.csv  submission_decomp_flat_2024.csv  submission_decomp_moderate_2024.csv  submission_decomp_same_growth.csv  (+51 more)
figures/: README.md
models/: __init__.py  baseline_internal_bottomup.py  data.py  final_meta_regime_ensemble.py  final_shape_medium.py
notebooks/: README.md
paper/: README.md
scripts/: run_part2_pipeline.py  run_part3_pipeline.py
(+84 files in other folders)
