[project]
name = "datathon-2026-round-1"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "lightgbm>=4.3.0",
    "matplotlib>=3.8.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
]

[tool.uv]
package = false
